apps/matrix/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matrix-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matrix-proxy
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - matrix
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: caddy
          image: caddy
          ports:
            - containerPort: 8008
              name: http
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            failureThreshold: 30
          volumeMounts:
            - name: matrix-proxy
              mountPath: /etc/caddy
              readOnly: true
      volumes:
        - name: matrix-proxy
          configMap:
            name: matrix-proxy
