apps/matrix/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
spec:
  ports:
    - name: http
      port: 8008
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
  selector:
    app.kubernetes.io/name: matrix
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-discord
spec:
  ports:
    - name: http
      port: 29334
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: matrix-discord
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-googlechat
spec:
  ports:
    - name: http
      port: 29320
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: matrix-googlechat
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-linkedin
spec:
  ports:
    - name: http
      port: 29341
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: matrix-linkedin
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-meta
spec:
  ports:
    - name: http
      port: 29319
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: matrix-meta
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-proxy
spec:
  ports:
    - name: http
      port: 8008
      targetPort: http
  selector:
    app.kubernetes.io/name: matrix-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-signal
spec:
  ports:
    - name: http
      port: 29328
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: matrix-signal
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-slack
spec:
  ports:
    - name: http
      port: 29335
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: matrix-slack
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-telegram
spec:
  ports:
    - name: http
      port: 29317
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: matrix-telegram
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-twitter
spec:
  ports:
    - name: http
      port: 29327
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: matrix-twitter
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-whatsapp
spec:
  ports:
    - name: http
      port: 29318
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: matrix-whatsapp
