apps/matrix/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-discord
spec:
  defaultBackend:
    service:
      name: matrix-discord
      port:
        name: http
  tls:
    - hosts:
        - matrix-discord
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-discord-media
spec:
  defaultBackend:
    service:
      name: matrix-proxy
      port:
        name: http
  tls:
    - hosts:
        - matrix-discord-media
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-googlechat
spec:
  defaultBackend:
    service:
      name: matrix-googlechat
      port:
        name: http
  tls:
    - hosts:
        - matrix-googlechat
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-linkedin
spec:
  defaultBackend:
    service:
      name: matrix-linkedin
      port:
        name: http
  tls:
    - hosts:
        - matrix-linkedin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-meta
spec:
  defaultBackend:
    service:
      name: matrix-meta
      port:
        name: http
  tls:
    - hosts:
        - matrix-meta
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-proxy
spec:
  defaultBackend:
    service:
      name: matrix-proxy
      port:
        name: http
  tls:
    - hosts:
        - matrix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-signal
spec:
  defaultBackend:
    service:
      name: matrix-signal
      port:
        name: http
  tls:
    - hosts:
        - matrix-signal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-slack
spec:
  defaultBackend:
    service:
      name: matrix-slack
      port:
        name: http
  tls:
    - hosts:
        - matrix-slack
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-twitter
spec:
  defaultBackend:
    service:
      name: matrix-twitter
      port:
        name: http
  tls:
    - hosts:
        - matrix-twitter
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-whatsapp
spec:
  defaultBackend:
    service:
      name: matrix-whatsapp
      port:
        name: http
  tls:
    - hosts:
        - matrix-whatsapp
