apps/matrix/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: http
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-discord
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-discord
  policyTypes:
    - Ingress
  ingress:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: matrix
      ports:
        - port: http
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-googlechat
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-googlechat
  policyTypes:
    - Ingress
  ingress:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: matrix
      ports:
        - port: http
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-manager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-manager
  policyTypes:
    - Ingress
  ingress:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: matrix
      ports:
        - port: http
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-meta
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-meta
  policyTypes:
    - Ingress
  ingress:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: matrix
      ports:
        - port: http
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-signal
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-signal
  policyTypes:
    - Ingress
  ingress:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: matrix
      ports:
        - port: http
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-slack
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-slack
  policyTypes:
    - Ingress
  ingress:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: matrix
      ports:
        - port: http
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-whatsapp
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-whatsapp
  policyTypes:
    - Ingress
  ingress:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: matrix
      ports:
        - port: http
          protocol: TCP
